[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Notebook/Notebook.gd" type="Script" id=1]
[ext_resource path="res://UI/Notebook/Notebook Site.png" type="Texture" id=2]
[ext_resource path="res://UI/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Hint/Send.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=3]
action = "Enter"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="Notebook" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 480, 560 )
scale = Vector2( 38, 38 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 80.0
margin_top = 48.0
margin_right = 880.0
margin_bottom = 944.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 800.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
custom_constants/separation = 16

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 952.0
margin_right = 832.0
margin_bottom = 1005.0
focus_mode = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
placeholder_text = "Write new note here"
placeholder_alpha = 0.75
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button Send" type="Button" parent="."]
margin_left = 840.0
margin_top = 968.0
margin_right = 868.0
margin_bottom = 990.0
rect_scale = Vector2( 2, 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="mouse_exited" from="LineEdit" to="." method="_on_LineEdit_mouse_exited"]
[connection signal="button_down" from="Button Send" to="." method="_on_Button_Send_button_down"]
